# KairoAI

./: AIContracts.cppm  AIProvider.cppm  AIToolPolicy.cppm  CMakeLists.txt  CprChatTransport.cppm  DeviceAgent.cppm  KairoAI.cppm  KairoAICloud.cppm  MockAIProvider.cppm  OpenAICompatibleProvider.cppm  README.md
tests/: DeviceAgentTests.cpp  KairoAICloudTests.cpp  KairoAITests.cpp
